--- a/styles.css
+++ b/styles.css
@@ -588,6 +588,164 @@ nav p + p {
  
 }
 
+@media (min-width: 760px) {
+    .bm3 {
+        display: none; /* Hide the element */
+    }
+}
+
+
+@media (min-width: 1024px) {
+    /* Adjust styles for desktop devices */
+    /* Example: */
+    body {
+        max-width: 1024px; /* Limit the maximum width of content for better readability on large screens */
+        margin: 0 auto; /* Center the content horizontally */
+    }
+    header {
+        padding: 3rem; /* Equivalent to lg:p-10 */
+        width: 100%;
+    }
+    nav p + p {
+        margin-left: 2rem; /* Set horizontal gap between links */
+    }
+
+    .rone {
+       
+        margin-right: 8rem; /* Equivalent to mr-80 */
+       
+    }
+
+    .wrapp {
+        display: flex; 
+    flex-direction: column; 
+    align-items: center; /* Align items horizontally */
+    gap: 1rem; 
+    width: 100%;
+    }
+
+    .imageone {
+        width: 100%; 
+        height: 100%; 
+        position: relative; 
+        display: block;
+    }
+    .sectone {
+        grid-template-columns: repeat(2, minmax(0, 1fr)); /* Equivalent to lg:grid-cols-2 */
+        padding-left: 2.0rem; /* Equivalent to lg:p-10 */
+        padding-right: 2.0rem; /* Equivalent to lg:p-10 */
+    }
+    .large {
+        display: flex; /* Display as flex on large screens */
+        flex-direction: column; 
+        gap: 1.25rem; 
+        align-items: flex-start; 
+        justify-content: center; 
+        padding-right: 20px;
+    }
+    .mobileone {
+        display: none; /* Hide on large screens */
+    }
+    .imagetwo{
+        display: none; /* Hide on large screens */
+    }
+
+    .section2 {
+        background-image: url('./images/bg-curve-desktop.svg'); /* Background image for desktop */
+       
+    }
+    .main2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr)); /* 2 columns on large screens */
+        gap: 2.5rem; /* Larger gap between grid items */
+        padding-left: 3.5rem; /* Equivalent to lg:p-10 */
+        padding-right: 6.5rem; /* Equivalent to lg:p-10 */
+        width: 100%;
+    }
+    .wrap2 {
+        display: flex; /* Display as flex on large screens */
+        flex-direction: column; 
+        gap: 1.25rem; 
+        align-items: flex-start; 
+    }
+    .imgse {
+        display: flex; /* Display as flex */
+        align-items: center; /* Align items vertically */
+        justify-content: center; /* Center justify content */
+    }
+    .imgse2 {
+        display: none; /* Display as flex */
+        
+    }
+
+    .dmobile {
+        display: none; /* Hide on large screens */
+    }
+    .section3 {
+        padding: 5.0rem; /* Equivalent to lg:p-10 */
+        width: 100%;
+    }
+
+    
+
+
+    .div3 {
+        flex-direction: row; /* Flex direction row on large screens */
+    }
+    .c3 {
+        align-items: center; /* Align items vertically to the center on large screens */
+        justify-content: center; /* Center justify content on large screens */
+    }
+.d3{
+    align-items: flex-start; /* Align items to the start on large screens */
+    justify-content: flex-start; /* Justify content to the start on large screens */
+    padding-left: 0; /* Equivalent to lg:px-0 */
+    padding-right: 16rem; /* Equivalent to lg:pr-64 */
+}
+.t3{
+    text-align: start; /* Align text to the start on large screens */
+}
+
+.w3 {
+    padding-left: 0; /* Remove left padding on large screens */
+    padding-right: 0; /* Remove right padding on large screens */
+}
+ 
+.b3 {
+    display: none; /* Hide the element */
+}
+
+.s4{
+    flex-direction: row; /* Flex direction row on large screens */
+    gap: 13rem; /* Equivalent to lg:gap-x-52 */
+    padding: 5.0rem; /* Equivalent to lg:p-10 */
+    padding-top: 0px;
+    width: 100%;
+}
+
+.l4 {
+    display: flex; /* Display as flex on large screens */
+}
+
+.m4 {
+    display: none; /* Hide the element on large screens */
+}
+
+.hun2 {
+    margin-top: 12rem; /* Equivalent to lg:mt-28 */
+}
+
+.j4 {
+    align-items: flex-start; /* Align items to the start on large screens */
+    justify-content: flex-start; /* Justify content to the start on large screens */
+    margin-top: 13rem; /* Equivalent to lg:mt-28 */
+}
+
+.bm3 {
+    display: block; /* Hide the element */
+}
+
+}
+
 /* Media query for desktop devices */
 @media (min-width: 1440px) {
     /* Adjust styles for desktop devices */
@@ -682,7 +840,7 @@ nav p + p {
     padding-left: 0; /* Remove left padding on large screens */
     padding-right: 0; /* Remove right padding on large screens */
 }
-
+ 
 .b3 {
     display: none; /* Hide the element */
 }
@@ -711,5 +869,6 @@ nav p + p {
     justify-content: flex-start; /* Justify content to the start on large screens */
     margin-top: 13rem; /* Equivalent to lg:mt-28 */
 }
+
 
 }
